--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@ workflows:
   plan_approve_apply:
     jobs:
       - plan-apply
-      - hold-apply:
-          type: approval
-          requires:
-            - plan-apply
+#      - hold-apply:
+#          type: approval
+#          requires:
+#            - plan-apply
       - apply:
           requires:
             - hold-apply
@@ -51,27 +51,41 @@ jobs:
           root: .
           paths:
             - .
-  plan-destroy:
+  fleet-install:
     docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+      - image: alpine/helm:3.5.2
     steps:
       - attach_workspace:
           at: .
       - run:
-          name: terraform create destroy plan
+          name: helm
           command: |
-            terraform -chdir=terraform plan -destroy -out tfdestroy -var-file variables.dev.tfvars
+            helm upgradee -n fleet-system --install --create-namespace --wait fleet https://github.com/rancher/fleet/releases/download/v0.3.3/fleet-0.3.3.tgz --context kubecontext-us-west1.yaml
       - persist_to_workspace:
           root: .
           paths:
             - .
-  destroy:
-    docker:
-      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
-    steps:
-      - attach_workspace:
-          at: .
-      - run:
-          name: terraform destroy
-          command: |
-            terraform -chdir=terraform apply -auto-approve tfdestroy
+#  plan-destroy:
+#    docker:
+#      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+#    steps:
+#      - attach_workspace:
+#          at: .
+#      - run:
+#          name: terraform create destroy plan
+#          command: |
+#            terraform -chdir=terraform plan -destroy -out tfdestroy -var-file variables.dev.tfvars
+#      - persist_to_workspace:
+#          root: .
+#          paths:
+#            - .
+#  destroy:
+#    docker:
+#      - image: docker.mirror.hashicorp.services/hashicorp/terraform:light
+#    steps:
+#      - attach_workspace:
+#          at: .
+#      - run:
+#          name: terraform destroy
+#          command: |
+#            terraform -chdir=terraform apply -auto-approve tfdestroy
