--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
       - run:
           name: save-reegistration-token
           command: |
-            kubectl -n uid2 get secret uid2-fleet -o 'jsonpath={.data.values}' | base64 --decode
+            kubectl -n uid2 get secret uid2-fleet -o 'jsonpath={.data.values}' | base64 --d
       - persist_to_workspace:
           root: .
           paths:
