--- a/fleet/helm/kube-prometheus-stack/fleet.yaml
+++ b/fleet/helm/kube-prometheus-stack/fleet.yaml
@@ -3,4 +3,5 @@ helm:
   releaseName: kube-prometheus-stack
   repo: https://prometheus-community.github.io/helm-charts
   chart: kube-prometheus-stack
+  version: 10.3.5
   values:
