--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,8 +98,7 @@ jobs:
           name: install-fleet-gitrepo-mission-control
           command: |
             echo '{ "apiVersion": "fleet.cattle.io/v1alpha1", "kind": "GitRepo", "metadata": { "name": "mission-control", "namespace": "fleet-local"},
-            "spec": {"repo": "https://github.com/ivan-gusev/uid2-infrastructure", "paths": ["fleet/gcp/mission-control"], "branch": ' \"$CIRCLE_BRANCH\",  \
-            '"targets": [{"name": "all","clusterSelector": {"matchLabels": {"fleet": "uid2", "cloud": "gcp"}}}]}}' | kubectl apply --kubeconfig="./terraform/gcp-kubecontext-mission-control.yaml" -f -
+            "spec": {"repo": "https://github.com/ivan-gusev/uid2-infrastructure", "paths": ["fleet/gcp/mission-control"], "branch": ' \"$CIRCLE_BRANCH\"}} | kubectl apply --kubeconfig="./terraform/gcp-kubecontext-mission-control.yaml" -f -
       - run:
           name: install-fleet-gitrepo-uid2
           command: |
