Dont manage autoneg-system namespace

--- a/fleet/gcp/uid2/autoneg/autoneg.yaml
+++ b/fleet/gcp/uid2/autoneg/autoneg.yaml
@@ -14,12 +14,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: autoneg-system
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  labels:
+#    control-plane: controller-manager
+#  name: autoneg-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
