Change sa for autoneg from default to autoneg-system

--- a/fleet/gcp/uid2/autoneg/autoneg.yaml
+++ b/fleet/gcp/uid2/autoneg/autoneg.yaml
@@ -182,6 +182,7 @@ spec:
       labels:
         control-plane: controller-manager
     spec:
+      serviceAccountName: autoneg-system
       containers:
       - args:
         - --secure-listen-address=0.0.0.0:8443
