--- a/fleet/gcp/uid2/autoneg/overlays/ox-lab-ivan-gusev/sa_patch.yaml
+++ b/fleet/gcp/uid2/autoneg/overlays/ox-lab-ivan-gusev/sa_patch.yaml
@@ -1,3 +1,3 @@
 metadata:
   annotations:
-    iam.gke.io/gcp-service-account=autoneg-system@$ox-lab-ivan-gusev.iam.gserviceaccount.com
+    iam.gke.io/gcp-service-account: autoneg-system@ox-lab-ivan-gusev.iam.gserviceaccount.com
