--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,7 @@ jobs:
             . $BASH_ENV # For some reason CircleCI does not do this, although documentation says it should
             eval export GOOGLE_PROJECT=\$${environment}_GOOGLE_PROJECT
             eval export GOOGLE_CREDENTIALS=\$${environment}_GOOGLE_CREDENTIALS
+            eval echo \$${environment}_TERRAFORM_BACKEND_B64 | base64 -d > terraform/backend.tf
             terraform -chdir=terraform init -input=false
             terraform -chdir=terraform plan -out tfapply -var-file variables.dev.tfvars
       - persist_to_workspace:
@@ -94,6 +95,7 @@ jobs:
             . $BASH_ENV # For some reason CircleCI does not do this, although documentation says it should
             eval export GOOGLE_PROJECT=\$${environment}_GOOGLE_PROJECT
             eval export GOOGLE_CREDENTIALS=\$${environment}_GOOGLE_CREDENTIALS
+            eval echo \$${environment}_TERRAFORM_BACKEND_B64 | base64 -d > terraform/backend.tf
             terraform -chdir=terraform apply -auto-approve tfapply
       - persist_to_workspace:
           root: .
