Point to correct folder for stage1 and pass region list from env variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,9 +72,10 @@ jobs:
             . $BASH_ENV # For some reason CircleCI does not do this, although documentation says it should
             eval export GOOGLE_PROJECT=\$${environment}_GOOGLE_PROJECT
             eval export GOOGLE_CREDENTIALS=\$${environment}_GOOGLE_CREDENTIALS
+            export TF_VAR_regions=`eval echo \\$${environment}_TF_VAR_regions_B64 |base64 -d`
             eval echo \$${environment}_TERRAFORM_BACKEND_B64 | base64 -d > terraform/backend.tf
-            terraform -chdir=terraform init -input=false
-            TF_VAR_environment=${environment} terraform -chdir=terraform plan -out tfapply -var-file variables.dev.tfvars
+            terraform -chdir=terraform/stage1 init -input=false
+            TF_VAR_environment=${environment} terraform -chdir=terraform/stage1 plan -out tfapply
       - persist_to_workspace:
           root: .
           paths:
@@ -96,7 +97,7 @@ jobs:
             eval export GOOGLE_PROJECT=\$${environment}_GOOGLE_PROJECT
             eval export GOOGLE_CREDENTIALS=\$${environment}_GOOGLE_CREDENTIALS
             eval echo \$${environment}_TERRAFORM_BACKEND_B64 | base64 -d > terraform/backend.tf
-            TF_VAR_environment=${environment} terraform -chdir=terraform apply -auto-approve tfapply
+            TF_VAR_environment=${environment} terraform -chdir=terraform/stage1 apply -auto-approve tfapply
       - persist_to_workspace:
           root: .
           paths:
@@ -165,7 +166,7 @@ jobs:
 #      - run:
 #          name: terraform create destroy plan
 #          command: |
-#            terraform -chdir=terraform plan -destroy -out tfdestroy -var-file variables.dev.tfvars
+#            terraform -chdir=terraform plan -destroy -out tfdestroy 
 #      - persist_to_workspace:
 #          root: .
 #          paths:
