--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,7 @@ jobs:
       - run:
           name: helm-fleet-crd
           command: |
-            helm upgrade -n fleet-system --install --create-namespace --wait fleet-crd https://github.com/rancher/fleet/releases/download/v0.3.3/fleet-crd-0.3.3.tgz --kubeconfig ./terraform/gcp-kubecontext-mission-control.yaml
+            helm upgrade -n fleet-system --install --create-namespace --wait fleet-crd https://github.com/rancher/fleet/releases/download/v0.3.3/fleet-crd-0.3.3.tgz --kubeconfig ./terraform/outputs/gcp-kubecontext-mission-control.yaml
       # Install fleet manager to mission control cluster
       - run:
           name: fleet-manager
@@ -210,11 +210,18 @@ jobs:
             kubectl -n uid2 get secret uid2-fleet -o 'jsonpath={.data.values}' --kubeconfig="./terraform/outputs/gcp-kubecontext-mission-control.yaml" | base64 -d | grep token: >> ./terraform/fleet-agent-values.yaml 
       # Install/update fleet-agents downstream
       - run:
-          name: helm-fleet-agent-install
+          name: helm-fleet-agent-install-gcp-clusters
           command: |
             find ./terraform -name gcp-kubecontext-*.yaml  ! -name gcp-kubecontext-mission-control.yaml -print -exec \
             helm upgrade -n fleet-system --install --create-namespace --wait --values ./terraform/fleet-agent-values.yaml \
             --set labels.env=`echo $CIRCLE_BRANCH | sed 's/live-//'` --set labels.fleet=uid2 --set labels.cloud=gcp \
+            fleet-agent https://github.com/rancher/fleet/releases/download/v0.3.3/fleet-agent-0.3.3.tgz --kubeconfig {} \;
+      - run:
+          name: helm-fleet-agent-install-aws-clusters
+          command: |
+            find ./terraform -name aws-kubecontext-*.yaml  ! -name gcp-kubecontext-mission-control.yaml -print -exec \
+            helm upgrade -n fleet-system --install --create-namespace --wait --values ./terraform/fleet-agent-values.yaml \
+            --set labels.env=`echo $CIRCLE_BRANCH | sed 's/live-//'` --set labels.fleet=uid2 --set labels.cloud=aws \
             fleet-agent https://github.com/rancher/fleet/releases/download/v0.3.3/fleet-agent-0.3.3.tgz --kubeconfig {} \;
       - run:
           name: install-fleet-gitrepo-mission-control
