Major: fleet-less install. Everything moved to terraform.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,10 +52,10 @@ workflows:
           requires:
             - plan-stage2
           <<: *live_only
-      - fleet-install:
-          requires:
-            - apply-stage2
-          <<: *live_only
+#      - fleet-install:
+#          requires:
+#            - apply-stage2
+#          <<: *live_only
 #      - plan-destroy:
 #          requires:
 #            - apply
