--- a/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/values.yaml
+++ b/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/values.yaml
@@ -8,6 +8,7 @@ cluster:
 project:
 domain:
 isGlobal: false
+regionalStaticIpName: thanos
 thanos:
   grpcBackends: []
   image: quay.io/thanos/thanos
