--- a/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/managed-certificate.yaml
+++ b/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/managed-certificate.yaml
@@ -4,7 +4,11 @@ metadata:
   name: {{ .Values.tlsCertificateName }}
 spec:
   domains:
+{{ if .Values.isGlobal }}
     - grafana.{{ .Values.tlsDomain }}
+{{ end }}
+    - grafana-{{ .Values.cluster }}.{{ .Values.tlsDomain }}
+
 ---
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
