--- a/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/thanos-query-grpc-svc.yaml
+++ b/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/thanos-query-grpc-svc.yaml
@@ -10,8 +10,9 @@ metadata:
   annotations:
     cloud.google.com/app-protocols: '{"grpc":"HTTP2"}'
     beta.cloud.google.com/backend-config: '{"default": "thanos-ingress"}'
+    cloud.google.com/neg: '{"ingress":true}'
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: {{ template "prometheus-operator-addons.name" . }}
     release: {{ .Release.Name }}
