Ensure TLS encryption when accessing thanos on leaf clusters

--- a/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/thanos-query-deployment.yaml
+++ b/terraform/modules/prometheus-monitoring/helm/kube-prometheus-addons/templates/thanos-query-deployment.yaml
@@ -60,6 +60,7 @@ spec:
 {{ end }}
 {{ if .Values.isGlobal }}
 {{- range .Values.thanos.grpcBackends }}
+        - "--grpc-client-tls-secure"
         - "--store={{ . }}"
 {{- end }}
 {{ else }}
