Change pathType for grafana ingress to ImplementationSpecific

--- a/terraform/modules/prometheus-monitoring/kube-prometheus-values.yaml
+++ b/terraform/modules/prometheus-monitoring/kube-prometheus-values.yaml
@@ -26,6 +26,7 @@ grafana:
   ingress:
     enabled: true
     path: /*
+    pathType: ImplementationSpecific
     annotations:
       networking.gke.io/managed-certificates: grafana-ssl-cert
   service:
